--- a/Bootstrap-project-main/css/style.css
+++ b/Bootstrap-project-main/css/style.css
@@ -13,7 +13,7 @@ body {
   padding: .5rem 0;
 }
 .top-bar a{
-  color: white;
+  color: rgb(243, 240, 240);
   text-decoration: none;
   font-size: 1.1rem;
 }
